plugins {
    id 'java'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.0.0'
//    id 'org.graalvm.buildtools.native' version '0.9.23'
}

apply plugin: 'java'

version '0.0.1-beta'
project.description = 'Zenmart ERP - Fintech Software.'
project.ext.buildDate = new Date()
project.version = '1.0.0'

repositories {
    mavenLocal()
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'org.infinite.spoty'
    mainClass = 'org.infinite.spoty.Main'
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.graphics']
}

//graalvmNative {
//    toolchainDetection = true
//    binaries {
//        main {
//            javaLauncher = javaToolchains.launcherFor {
//                languageVersion = JavaLanguageVersion.of(17)
//                vendor = JvmVendorSpec.matching('Oracle Corporation')
//            }
//        }
//    }
//}

test {
    useJUnitPlatform()
}

run {
    jvmArgs = [
            '-XX:NewRatio=1',
            '-Xms256m',
            '-Xmx2G',
            '-XX:ReservedCodeCacheSize=512m',
            '-XX:+UseG1GC',
            '-XX:SoftRefLRUPolicyMSPerMB=50',
            '-XX:CICompilerCount=2',
            '-XX:+HeapDumpOnOutOfMemoryError',
            '-Dsun.io.useCanonCaches=false',
            '-Djbr.catch.SIGABRT=true',
            '-Djdk.attach.allowAttachSelf=true',
    ]
}

jar {
    manifest {
        attributes(
                'Main-Class': 'org.infinite.spoty.Main'
        )
    }
}

jlink {
    imageZip = project.file('${buildDir}/distributions/app-${javafx.platform.classifier}.zip')
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'Zenmart ERP'
        jvmArgs = [
                '-XX:NewRatio=1',
                '-Xms256m',
                '-Xmx2G',
                '-XX:ReservedCodeCacheSize=512m',
                '-XX:+UseG1GC',
                '-XX:SoftRefLRUPolicyMSPerMB=50',
                '-XX:CICompilerCount=2',
                '-XX:+HeapDumpOnOutOfMemoryError',
                '-Dsun.io.useCanonCaches=false',
                '-Djbr.catch.SIGABRT=true',
                '-Djdk.attach.allowAttachSelf=true',
                '-XX:ErrorFile=/home/infinite-dev/IdeaProjects/spoty/error%p.log',
        ]
    }

    jpackage {
        installerType == 'msi'
        installerOptions = [
                '--name', 'Zenmart-ERP',
                '--description', project.description,
                '--copyright', 'Copyrigth 2023 infinite Studios',
                '--vendor', 'infinite Studios',
                '--win-dir-chooser',
                '--win-menu', '--win-shortcut',
                '--win-dir-chooser', '--win-menu',
                '--win-per-user-install', '--win-shortcut-prompt',
                '--icon', 'src/main/resources/logo.ico',
        ]
    }
    addExtraDependencies('javafx')
}

tasks.register('doPackageAll') {
    doLast {
        if (Os.isFamily(Os.FAMILY_UNIX)) {
            exec {
                mkdir('$buildDir/distributions')
                executable '$projectDir/scripts/JLinkPackage.sh'
                args = ['$buildDir']
            }
        }
    }
}

jlinkZip.doLast {
    doPackageAll
}

dependencies {
    // To fix SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".
    //SLF4J: Defaulting to no-operation (NOP) logger implementation
    implementation 'org.slf4j:slf4j-simple:2.0.9'
    // https://mvnrepository.com/artifact/net.java.dev.jna/jna
    implementation 'net.java.dev.jna:jna:5.13.0'
    // https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform
    implementation 'net.java.dev.jna:jna-platform:5.13.0'

    implementation 'org.xerial:sqlite-jdbc:3.43.2.1'
    implementation 'com.j256.ormlite:ormlite-jdbc:6.1'
    implementation 'org.jetbrains:annotations:24.0.1'
    implementation 'io.github.palexdev:materialfx:11.16.1'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-core:12.3.1'
    implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.1'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0-B01'
    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1'
    implementation 'fr.brouillard.oss:cssfx:11.5.1'
//    implementation 'io.github.palexdev:scenicview:17.0.2'
    implementation 'io.github.palexdev:virtualizedfx:11.9.6'
    implementation 'io.github.palexdev:mfxcomponents:11.24.1'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
}
